version/3.0/_sources/index.rst.txt
Ansys SCADE Actions documentation
#################################

.. include:: ../../README.rst
   :start-after: .. readme_common_begins
   :end-before: .. readme_common_ends

For information on available actions and how to use them,
see each of the following cards:

.. grid:: 1 1 2 3
    :gutter: 2

    .. grid-item-card:: :octicon:`search` Query actions
       :link: query-actions/index
       :link-type: doc

       Retrieve SCADE installation directories and
       Python environments.

    .. grid-item-card:: :octicon:`tools` Tests actions
       :link: tests-actions/index
       :link-type: doc

       Set up Python environments for SCADE and
       run the test suite for a SCADE Python library.

    .. grid-item-card:: :octicon:`cpu` SCADE Suite actions
       :link: suite-actions/index
       :link-type: doc

       Execute SCADE Suite command line tools on models.

    .. grid-item-card:: :octicon:`checklist` SCADE Test actions
       :link: test-actions/index
       :link-type: doc

       Execute SCADE Test command line tools on models.

    .. grid-item-card:: :octicon:`devices` SCADE Display actions
       :link: display-actions/index
       :link-type: doc

       Execute SCADE Display command line tools on models.

    .. grid-item-card:: :octicon:`device-desktop` SCADE Rapid Prototyper actions
       :link: rapid-prototyper-actions/index
       :link-type: doc

       Execute SCADE Rapid Prototyper command line tools on models.

    .. grid-item-card:: :material-regular:`work;1.25em` Reusable workflows
       :link: workflows/index
       :link-type: doc

       Reuse generic workflows.

.. toctree::
   :hidden:
   :maxdepth: 3

   query-actions/index
   tests-actions/index
   suite-actions/index
   test-actions/index
   display-actions/index
   rapid-prototyper-actions/index
   workflows/index
